# Codepair

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  start.sh  stop.sh
frontend/: package-lock.json
frontend/src/components/: Lobby.jsx  Workspace.jsx
frontend/src/hooks/: useCollaboration.js
include/: CodeExecutor.h  RedisClient.h  SessionManager.h
sidecar/: main.py
src/: CodeExecutor.cpp  RedisClient.cpp  SessionManager.cpp  ThreadPool.cpp  main.cpp
src/cpp_server/: Dockerfile
src/cpp_server/include/: SessionManager.h  ThreadPool.h
src/cpp_server/src/: SessionManager.cpp  main.cpp
src/frontend/: index.html
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: Lobby.jsx  Workspace.jsx
src/frontend/src/hooks/: useCollaboration.js
src/sidecar/: Dockerfile  main.py
